--- a/.github/workflows/daily-commit.yml
+++ b/.github/workflows/daily-commit.yml
@@ -1,30 +1,27 @@
-name: Daily Commit Workflow
-on:
-  workflow_dispatch: # <-- This line allows you to run it manually (Step 7)
-  schedule:
-    # This cron is set to run ~2 minutes from now (UTC)
-    - cron: '6 17 * * *'
+name: Daily Commit
 
-# ADDED: This gives the workflow write permissions for the commit
-permissions:
-  contents: write
+on:
+  schedule:
+    - cron: '15 4 * * *'
+  workflow_dispatch:
 
 jobs:
-  daily-commit:
+  commit:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-        # ADDED: Explicitly checkout the main branch
+      - name: Checkout repository
+        uses: actions/checkout@v3
         with:
-          ref: main 
+          token: ${{ secrets.GITHUB_TOKEN }}  # ✅ allows push access
 
-      - name: Create Empty Commit
+      - name: Commit step - roshinikdrl234@gmail.com
         run: |
-          git config user.name "GitHub Actions Bot"
-          git config user.email "actions-bot@github.com"
-          git commit --allow-empty -m "Daily empty commit"
-          git push
+          echo "TDSFU Daily run: $(date -u) TDSFU" >> daily-log.txt
 
-      - name: Validation Step for roshinikdrl234@gmail.com
-        run: echo "This step validates the workflow for the user."
+      - name: Git Commit and Push
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add daily-log.txt
+          git commit -m "Auto commit at $(date -u)" || echo "No changes to commit"
+          git push
